fixed (issue): change open to 3 type visibility

--- a/src/components/backdrop/backdrop.module.css
+++ b/src/components/backdrop/backdrop.module.css
@@ -3,28 +3,46 @@
   width: 100%;
   height: 100%;
   z-index: 10;
+  transition: 0.3s;
 }
-.BackDrop {
+.Container.Start {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.Container.Hidden {
+  visibility: hidden;
+  opacity: 0;
+  animation: ShowBackDrop 1s reverse;
+}
+
+.Container.Show {
+  visibility: visible;
+  opacity: 1;
+  animation: ShowBackDrop 1s;
+}
+.Container .BackDrop {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 11;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
-.Open {
-  opacity: 1;
-  transition: 0.2s;
-  background-color: rgba(0, 0, 0, 0.432);
-}
-.Close {
-  transition: 0.2s;
-  background-color: rgba(0, 0, 0, 0);
-  opacity: 0;
-}
-.ContianerChild {
+.Container .ContianerChild {
   z-index: 12;
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
+}
+
+@keyframes ShowBackDrop {
+  0% {
+    visibility: visible;
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
 }
